package pt.ipp.isep.dei.domain.building;

public enum BuildingType {
    TELEGRAPH,
    TELEPHONE,
    SMALL_CAFE,
    LARGE_CAFE,
    CUSTOMS,
    POST_OFFICE,
    SMALL_HOTEL,
    LARGE_HOTEL,
    SILO,
    LIQUID_STORAGE
}
