package pt.ipp.isep.dei.ui;

import pt.ipp.isep.dei.controller.UpgradeStationController;
import pt.ipp.isep.dei.dto.*;

import java.util.List;

public class UpgradeStationUI {
    public void displayStations(List<StationDTO> stations) {
    }

    public String selectStation() {
        return null;
    }

    public void displayAvailableUpgrades(List<AvailableUpgradeDTO> upgrades) {
    }

    public String selectUpgrade() {
        return null;
    }

    public StationUpgradeRequestDTO getUpgradeRequest() {
        return null;
    }

    public void displayUpgradeResult(UpgradeResultDTO result) {

    }

    public void displayPlayerInfo(PlayerDTO player) {

    }
}
